Handled user inputs in liveview

--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -17,6 +17,11 @@
     current_user={@current_user}
     users={@users}
   />
+  <%# Change condition to if player is alive %>
+  <%= if true do %>
+    <span phx-window-keydown="key_down"></span>
+    <span phx-window-keyup="key_up"></span>
+  <% end %>
 <% else %>
   <%# Lobby Screen %>
 
