created help component

--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -28,6 +28,13 @@
     id="start"
   />
 
+  <%# Help Screen %>
+  <.live_component
+    module={ProjectQuazarWeb.Help}
+    id="help"
+    current_page={@current_page} 
+  />
+
   <%# User entry form menu %>
   <.live_component
     module={ProjectQuazarWeb.UserForm}
