--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -20,8 +20,7 @@
     users={@users}
   />
 <% else %>
-  <%# Lobby Screen %>
-
+  <%= if @start do %>
   <%# Start Screen %>
   <.live_component
     module={ProjectQuazarWeb.Start}
@@ -34,6 +33,10 @@
     id="help"
     current_page={@current_page} 
   />
+  <% else %>
+
+
+  <%# Lobby Screen %>
 
   <%# User entry form menu %>
   <.live_component
@@ -46,4 +49,5 @@
     id="all_time-high-scores-component"
     top_scores={@top_scores}
   />
+<% end %>
 <% end %>
