remove inline styling; add styling to `app.css`

--- a/project_quazar/assets/css/app.css
+++ b/project_quazar/assets/css/app.css
@@ -2,53 +2,22 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* ******************** */
-/* All-Time High Scores */
-/* ******************** */
-.high-scores-container {
-    max-width: 400px;
-    margin: 20px auto;
-    padding: 15px;
-    background-color: #f9f9f9;
-    border: 5px solid #ddd;
-    border-radius: 8px;
-  }
-
-  .high-scores-container h1 {
-    text-align: center;
-    font-weight: bolder;
-
-  }
-
-  .high-scores-container ul {
-    list-style: none;
-    padding: 0;
-  }
-
-  .high-scores-container li {
-    margin: 10px 0;
-    padding: 10px;
-    background-color: #eee;
-    border-radius: 4px;
-  }
-
-  .high-scores-container .player {
-    font-weight: bold;
-  }
-
-  .high-scores-container .score {
-    float: right;
-  }
-
-
   /* Base container styling */
+.scoreboard-position {
+  @apply fixed right-0 mt-4 mr-4;
+}
+
 .base-container {
-  @apply bg-gray-900 p-6 rounded-lg shadow-lg max-w-md mx-auto;
+  @apply bg-gray-900 p-6 rounded-lg shadow-lg max-w-md;
 }
 
 /* Title styling */
 .title {
   @apply text-white text-3xl font-bold text-center mb-6;
+}
+
+.no-scores {
+  @apply text-white text-center text-xl;
 }
 
 /* User list container */
@@ -58,7 +27,7 @@
 
 /* User item base styling */
 .user-item-base {
-  @apply flex justify-between items-center p-4 rounded-lg text-white font-semibold transition duration-300 ease-in-out transform hover:scale-105;
+  @apply flex justify-between items-center p-4 bg-green-600 rounded-lg text-white font-semibold transition duration-300 ease-in-out transform hover:scale-105;
 }
 
 /* Current user item styling */
