added docs for relevant start/help components

--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -4,6 +4,14 @@
   @joined: boolean - determines if the user has joined the game
     - true: renders the main game screen
     - false: renders the lobby screen
+
+  @start: boolean - determines if the start screen should be rendered
+    - true: renders the start screen
+    - false: renders the lobby screen
+  
+  @show_help: boolean - determines if the help screen should be rendered
+    - true: renders the help screen
+    - false: does not render the help screen
 %>
 
 
