heex now uses socket's players

--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -18,7 +18,7 @@
     module={ProjectQuazarWeb.Scoreboard}
     id="scoreboard"
     current_user={@current_user}
-    users={@users}
+    players={@players}
   />
 <% else %>
   <%# Lobby Screen %>
