--- a/project_quazar/assets/css/app.css
+++ b/project_quazar/assets/css/app.css
@@ -74,6 +74,18 @@
 .button-tertiary {
   @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded;
 }
+
+.user_and_scoreboard_container{
+  @apply flex
+}
+
+.alltime_scoreboard_container{
+  @apply w-1/2 flex justify-center
+}
+.user_form_container{
+  @apply w-1/2
+}
+
 /* ***************** */ 
   /* User details form */
   /* ***************** */ 
