Adding game over player score and removing player from presence list

--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -21,7 +21,7 @@
 <%= if @joined do %>
 
   <%= if @game_over do %>
-    <div><.live_component module={ProjectQuazarWeb.GameOver} id="game-over" players={@players} current_user={@current_user} /></div>
+    <div><.live_component module={ProjectQuazarWeb.GameOver} id="game-over" players={@players} current_user={@current_user} player_score={@dead_player_score}/></div>
   <% else %>
     <%# Main Game Screen %>
     <%# TODO: Add the game board here %>
