Connect pubsub prototype to game.ex

--- a/project_quazar/lib/project_quazar_web/live/game.html.heex
+++ b/project_quazar/lib/project_quazar_web/live/game.html.heex
@@ -27,7 +27,7 @@
     <%# TODO: Add the game board here %>
 
       <%# Live Game Board %>
-      <.live_component module={ProjectQuazarWeb.GameBoard} id="game-board" circle_pos={@circle_pos} />
+      <.live_component module={ProjectQuazarWeb.GameBoard} id="game-board" current_user={@current_user} game_state={@game_state}} />
 
     <%# Live scoreboard menu %>
     <.live_component
